390361 Refactor ProductAction related tests
- Check status of execution of ProductAction.
- Removed included content from products where there inclusions were
  not relevant for the test.
- Simplified ProductActionTest by providing more defaults. Tests
  which really required the capturing mocks were moved to
  ProductActionCapturingTest.

Bug: 390361 Published products are broken if included fragments are not in context