@@ -1,13 +1,14 @@
 /*******************************************************************************
- *  Copyright (c) 2008, 2012 IBM Corporation and others.
- *  All rights reserved. This program and the accompanying materials
- *  are made available under the terms of the Eclipse Public License v1.0
- *  which accompanies this distribution, and is available at
- *  http://www.eclipse.org/legal/epl-v10.html
+ * Copyright (c) 2008, 2012 Code 9 and others. All rights reserved. This
+ * program and the accompanying materials are made available under the terms of
+ * the Eclipse Public License v1.0 which accompanies this distribution, and is
+ * available at http://www.eclipse.org/legal/epl-v10.html
  * 
- *  Contributors:
- *   IBM - initial API and implementation
- *******************************************************************************/
+ * Contributors: 
+ *   Code 9 - initial API and implementation
+ *   IBM - ongoing development
+ *   SAP AG - ongoing development
+ ******************************************************************************/
 package org.eclipse.equinox.p2.tests.publisher.actions;
 
 import static org.easymock.EasyMock.*;
@@ -20,24 +21,24 @@ import java.util.Collections;
 import org.easymock.Capture;
 import org.easymock.EasyMock;
 import org.eclipse.core.runtime.IStatus;
+import org.eclipse.equinox.frameworkadmin.BundleInfo;
 import org.eclipse.equinox.internal.p2.publisher.eclipse.ProductFile;
 import org.eclipse.equinox.p2.metadata.Version;
-import org.eclipse.equinox.p2.publisher.AbstractPublisherAction;
 import org.eclipse.equinox.p2.publisher.IPublisherInfo;
 import org.eclipse.equinox.p2.publisher.actions.RootIUAdvice;
 import org.eclipse.equinox.p2.publisher.eclipse.*;
 import org.eclipse.equinox.p2.tests.TestData;
+import org.eclipse.equinox.p2.tests.publisher.TestArtifactRepository;
 
-/**
- * Tests for {@link ProductAction} specific to Mac.
- */
 @SuppressWarnings({"unchecked"})
-public class ProductActionTestMac extends ActionTest {
+public class ProductActionCapturingTest extends ActionTest {
 
-	private File executablesFeatureLocation = null;
+	File executablesFeatureLocation = null;
+	String source = "";
+
 	private Capture<RootIUAdvice> rootIUAdviceCapture;
 	private Capture<ProductFileAdvice> productFileAdviceCapture;
-	private String source = "";
+	protected TestArtifactRepository artifactRepository = new TestArtifactRepository(getAgent());
 
 	@Override
 	protected IPublisherInfo createPublisherInfoMock() {
@@ -46,15 +47,18 @@ public class ProductActionTestMac extends ActionTest {
 	}
 
 	protected void insertPublisherInfoBehavior() {
+		// capture these calls for assertions
 		publisherInfo.addAdvice(EasyMock.and(EasyMock.isA(RootIUAdvice.class), EasyMock.capture(rootIUAdviceCapture)));
 		publisherInfo.addAdvice(EasyMock.and(EasyMock.isA(ProductFileAdvice.class), EasyMock.capture(productFileAdviceCapture)));
+
+		expect(publisherInfo.getArtifactRepository()).andReturn(artifactRepository).anyTimes();
+		expect(publisherInfo.getArtifactOptions()).andReturn(IPublisherInfo.A_PUBLISH).anyTimes();
 		//Return an empty list every time getAdvice is called
 		expect(publisherInfo.getAdvice((String) anyObject(), anyBoolean(), (String) anyObject(), (Version) anyObject(), (Class) anyObject())).andReturn(Collections.emptyList());
 		expectLastCall().anyTimes();
 	}
 
 	public void setUp() throws Exception {
-		configSpec = AbstractPublisherAction.createConfigSpec("carbon", "macosx", "x86");
 		rootIUAdviceCapture = new Capture<RootIUAdvice>();
 		productFileAdviceCapture = new Capture<ProductFileAdvice>();
 		setupPublisherInfo();
@@ -62,10 +66,36 @@ public class ProductActionTestMac extends ActionTest {
 	}
 
 	/**
+	 * Tests that a product file containing bundle configuration data produces appropriate 
+	 * IConfigAdvice (start levels, auto-start).
+	 */
+	public void testSetBundleConfigData() throws Exception {
+		ProductFile productFile = new ProductFile(TestData.getFile("ProductActionTest", "startLevel.product").toString());
+		testAction = new ProductAction(source, productFile, flavorArg, executablesFeatureLocation);
+
+		IStatus status = testAction.perform(publisherInfo, publisherResult, null);
+		assertThat(status, is(okStatus()));
+
+		IConfigAdvice configAdvice = productFileAdviceCapture.getValue();
+		BundleInfo[] bundles = configAdvice.getBundles();
+		assertEquals("1.0", 2, bundles.length);
+		assertEquals("1.1", "org.eclipse.equinox.common", bundles[0].getSymbolicName());
+		assertEquals("1.2", "1.0.0", bundles[0].getVersion());
+		assertEquals("1.3", 13, bundles[0].getStartLevel());
+		assertEquals("1.4", false, bundles[0].isMarkedAsStarted());
+
+		assertEquals("2.1", "org.eclipse.core.runtime", bundles[1].getSymbolicName());
+		assertEquals("2.2", "2.0.0", bundles[1].getVersion());
+		assertEquals("2.3", 6, bundles[1].getStartLevel());
+		assertEquals("2.4", true, bundles[1].isMarkedAsStarted());
+	}
+
+	/**
 	 * Tests that correct advice is created for the org.eclipse.platform product.
 	 */
 	public void testPlatformProduct() throws Exception {
 		ProductFile productFile = new ProductFile(TestData.getFile("ProductActionTest", "platform.product").toString());
+
 		testAction = new ProductAction(source, productFile, flavorArg, executablesFeatureLocation);
 		IStatus status = testAction.perform(publisherInfo, publisherResult, null);
 		assertThat(status, is(okStatus()));
@@ -74,17 +104,11 @@ public class ProductActionTestMac extends ActionTest {
 		assertEquals("1.0", "eclipse", launchAdvice.getExecutableName());
 
 		String[] programArgs = launchAdvice.getProgramArguments();
-		assertEquals("2.0", 2, programArgs.length);
-		assertEquals("2.1", "-showsplash", programArgs[0]);
-		assertEquals("2.2", "org.eclipse.platform", programArgs[1]);
+		assertEquals("2.0", 0, programArgs.length);
 
 		String[] vmArgs = launchAdvice.getVMArguments();
-		assertEquals("3.0", 6, vmArgs.length);
-		assertEquals("3.1", "-Xdock:icon=../Resources/Eclipse.icns", vmArgs[0]);
-		assertEquals("3.2", "-XstartOnFirstThread", vmArgs[1]);
-		assertEquals("3.3", "-Xms40m", vmArgs[2]);
-		assertEquals("3.4", "-Xmx256m", vmArgs[3]);
-		assertEquals("3.5", "-XX:MaxPermSize=256m", vmArgs[4]);
-		assertEquals("3.6", "-Dorg.eclipse.swt.internal.carbon.smallFonts", vmArgs[5]);
+		assertEquals("3.0", 0, vmArgs.length);
+
 	}
+
 }
